# AI_term_project

./: .gitignore  README.md  Untitled.ipynb  main.ipynb  pyproject.toml
models/: cnn_time_classifier.pth  dnn_time_classifier.pth  eval_log_baseline_ma.txt  eval_log_multivariate.txt  eval_log_multivariate_timeperiod.txt  scaler.pkl  scaler_multivariate.pkl  seq2seq_model.pth
models/hyperparameter_results/: best_hyperparameters.txt  hyperparameter_results.csv
notebooks/: auto_label_weekend_and_train_dnn.ipynb  auto_label_weekend_and_train_dnn.py  baseline_moving_average.ipynb  baseline_moving_average.py  download_data.ipynb  hyperparameter_experiment.ipynb  hyperparameter_experiment.py  main.ipynb  model1.ipynb  model2.ipynb  model2_dnn_cnn_comparison.ipynb  model2_dnn_cnn_comparison.py  project.ipynb  test_script.ipynb  train_multivariate_seq2seq.ipynb  train_multivariate_seq2seq.py  train_multivariate_timeperiod_seq2seq.ipynb  train_multivariate_timeperiod_seq2seq.py
